Fix help-tip wrapping

--- a/app/stylesheets/builtin-pages/components/help-tips.less
+++ b/app/stylesheets/builtin-pages/components/help-tips.less
@@ -8,6 +8,7 @@
   background: #fff;
   border-radius: 3px;
   color: @color-text;
+  white-space: nowrap;
 
   a:not(.btn) {
     &:extend(.link);
